footer backgrond color

--- a/Bookings.html
+++ b/Bookings.html
@@ -7,12 +7,54 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<style>
+   form {
+    background-color:white;
+    color: black;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px aqua;
+    width: 300px;
+    margin: 20px;
+  }
+
+  footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #0A1C2B;
+  margin-top: auto; 
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+}
+
+footer div h4 {
+  margin-right: 10px;
+}
+
+footer div p {
+  margin: 0;
+}
+
+footer div p a {
+  color:white;
+  text-decoration: none;
+}
+
+footer div p a:hover {
+  text-decoration: underline;
+}
+</style>
 </head>
 
 <body>
 <header style="margin-top: 2%;">
   <div class="header-container">
-    <span style="margin-left: 3%;color:#79d4bd;"class="logo"><b>SIMPLE LEARN</b></span>
+    <span style="margin-left: 3%;color:aqua;"class="logo"><b>SIMPLE LEARNING TECHNIQUES</b></span>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -25,6 +67,47 @@
   </div>
 </header>
 <body>
+  <center>
+
+<h1 style="text-align: center;">BOOK A CALL</h1>
+
+<form action="booking_process.php" method="post"> 
+<label for="fullName">Full Name:</label><br><br>
+<input type="text" id="fullName" name="fullName" required> <br> <br>
+
+<label for="email">Email Address:</label> <br>
+<input type="email" id="email" name="email" required> <br><br>
+
+<label for="phone">Phone Number:</label><br>
+<input type="tel" id="phone" name="phone" required> <br><br>
+
+
+<label for="date">Choose Date:</label><br>
+<input type="date" id="date" name="date" required
+       min="2024-02-15" max="2024-12-31"> <br><br>
+
+
+
+<button>Book</button>
+
+
+</form>
+
+  </center>
+  <footer>
+    <div>
+      <span>   TECH INNOVATION &copy; 2024
+      </b></span>
+      
+    </div>
   
+    <div class="social-icon">
+     <span style="color: aliceblue;" > <i class="far fa-envelope"></i>simpleLearn.org.za</a><br>
+        <i class="fas fa-phone"></i>0609360456</a><br>
+        <i class="fas fa-map-marker-alt"></i> 97 SALT RIVER</span>
+       
+    </div>
+    </div>
+  </footer>
 </body>
 </html>
