--- a/about.html
+++ b/about.html
@@ -3,16 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Simple Learn</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<style>
+  .aboutus{
+    margin-top: 50px;
+    background-color: white;
+    width: 800px;
+    height: 500px;
+    margin-left: 25%;
+    padding: 10px;
+  }
+  h3{
+    text-align: center;
+    color: black;
+  }
+  .certificate{
+    margin-top: 50px;
+    background-color: white;
+    width: 800px;
+    height: 500px;
+    margin-left: 25%;
+    padding: 10px;
+  }
+  footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #0A1C2B;
+  margin-top: auto; 
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+}
+
+footer div h4 {
+  margin-right: 10px;
+}
+
+footer div p {
+  margin: 0;
+}
+
+footer div p a {
+  color:white;
+  text-decoration: none;
+}
+
+footer div p a:hover {
+  text-decoration: underline;
+}
+  
+</style>
+
 </head>
 
 <body>
 <header style="margin-top: 2%;">
   <div class="header-container">
-    <span style="margin-left: 3%;color:#79d4bd;"class="logo"><b>SIMPLE LEARN</b></span>
+    <span style="margin-left: 3%;color:aqua;"class="logo"><b>SIMPLE LEARN</b></span>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -25,6 +80,19 @@
   </div>
 </header>
 <body>
-  
+  <div class="aboutus" style="border-radius: 10px;">
+    <h3>ABOUT US</h3>
+    <p> AWS Certified Solutions Architect is among the most valuable and sought-after cloud computing
+       certifications in the world.** We designed this cloud architect certification training for anyone
+        seeking to learn the major components of Amazon Web Services (AWS). By the end of the course, 
+        you'll be prepared to pass the associate-level AWS Certified Solutions Architect certification exam. 
+        <a href="https://aws.amazon.com/certification/?trk=742e62dc-eb49-4533-8202-1f26b07a5307&sc_channel=ps&s_kwcid=AL!4422!10!72086990821783!72087529695138&ef_id=3db1ca85735818448544af6fba60669b:G:s&s_kwcid=AL!4422!10!72086990821783!72087529695138">Please learn more</a>
+
+       </p>
+  </div>
+  <footer style="margin-bottom: 1px;">
+    <br><br>
+    TECH INNOVATION &copy; 2024
+    </footer>
 </body>
 </html>
