--- a/index.html
+++ b/index.html
@@ -7,12 +7,44 @@
   <title>SIMPLE LEARN</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #0A1C2B;
+  margin-top: auto; 
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+}
+
+footer div h4 {
+  margin-right: 10px;
+}
+
+footer div p {
+  margin-bottom: 5px;
+}
+
+footer div p a {
+  color:white;
+  text-decoration: none;
+}
+
+footer div p a:hover {
+  text-decoration: underline;
+}
+  </style>
 </head>
 
 <body>
-  <header style="margin-top: 2%;">
+  <header style="margin-top: 0.5%;">
     <div class="header-container">
-      <span style="margin-left: 3%;color:#79d4bd;"class="logo"><b>SIMPLE LEARN</b></span>
+      <span style="margin-left: 3%;color:aqua;"class="logo"><b>SIMPLE LEARNING TECHNIQUES</b></span>
       <nav class="nav-menu">
         <ul>
           <li><a href="index.html">HOME</a></li>
@@ -28,8 +60,7 @@
   <br>
   <body>
 
-    <h1>Exploring Simple Learning Techniques
-    </h1>
+    <h1>GET A HIGHER CERTIFICATE IN SOFTWARE ENGINERING</h1>
 
 <div class="container">
   <div class="box">
@@ -88,10 +119,12 @@
 
   </div>
 </div>
+<br>
 <footer style="margin-bottom: 1px;">
   <br><br>
-  & 2024, TECH INNOVATION
+  TECH INNOVATION &copy; 2024
   </footer>
+  
 </body>
 </html>
 
