--- a/certificate.html
+++ b/certificate.html
@@ -3,13 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Simple Learning Techniques</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    .certificate{
+    margin-top: 50px;
+    background-color: white;
+    width: 800px;
+    height: 500px;
+    margin-left: 25%;
+    padding: 10px;
+  }
+  footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #0A1C2B;
+  margin-top: auto; 
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+}
+
+footer div h4 {
+  margin-right: 10px;
+}
+
+footer div p {
+  margin: 0;
+}
+
+footer div p a {
+  color:white;
+  text-decoration: none;
+}
+
+footer div p a:hover {
+  text-decoration: underline;
+}
+  </style>
 </head>
 <header style="margin-top: 2%;">
   <div class="header-container">
-    <span style="margin-left: 3%;color:#79d4bd;"class="logo"><b>SIMPLE LEARN</b></span>
+    <span style="margin-left: 3%;color:aqua;"class="logo"><b>SIMPLE LEARNING TECHNIQUES</b></span>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
@@ -22,5 +62,26 @@
   </div>
 </header>
 <body>
+  <div class="certificate" style="border-radius: 10px;">
+    <p>Amazon Web Services (AWS) is a comprehensive, evolving cloud computing platform provided by Amazon.com. 
+      It offers a wide range of cloud services, including computing power, storage options, networking, databases, and more. 
+      Obtaining a certification in AWS validates expertise in cloud computing and opens doors to various career opportunities
+       in the tech industry. 
+    <p>EDUREKA provides industry-relevant certifications and training programs, including courses focused on AWS. 
+      An EDUREKA certificate in AWS demonstrates proficiency in utilizing AWS services effectively, managing cloud-based infrastructure,
+       and implementing best practices in cloud computing. With the combination of AWS skills and an EDUREKA certificate,
+        individuals can showcase their competence in cloud technologies and enhance their professional credentials.</p>
+        <p>As part of our commitment to empowering learners, we offer complimentary access to high-quality courses on Udemy,
+          a leading online learning platform. These carefully curated resources are designed to thoroughly prepare individuals for their upcoming exams. 
+          Leveraging the expertise of top instructors and comprehensive study materials,  our  <a href="https://www.udemy.com/course/draft/362328/?matchtype=b&msclkid=0cd4686204151873b6150d88d069ad6e&utm_campaign=BG-LongTail_la.EN_cc.ROW_Experiment_2&utm_content=deal4584&utm_medium=udemyads&utm_source=bing&utm_term=_._ag_1317217289464724_._ad__._kw_Amazon+AWS+Training_._de_c_._dm__._pl__._ti_kwd-82327071141879_._li_137943_._pd__._">free Udemy courses</a> 
+           ensure that candidates are well-equipped with the knowledge and skills necessary to excel in their examinations.</p>
+           <img src="AWS_MORE_CERT-removebg-preview.png" alt="AWS" style="width: 820px; height: 150px; margin-left: -11px;">
+       </p>.
+  </body>
+  </div>
+  <footer style="margin-bottom: 1px;">
+    <br><br>
+    TECH INNOVATION &copy; 2024
+    </footer>
 </body>
 </html>
