--- a/contact.html
+++ b/contact.html
@@ -11,19 +11,22 @@
 <style>
   .contact{
     background-color:#eaecee;
-    height: 550px;
-    width: 500px;
+    height: 500px;
+    width: 400px;
     border-radius: 15px;
     text-align: center;
     margin-left: 40%;
     margin-top: 5%;
     padding-top: 10px;
+    box-shadow: 0 0 10px aqua;
+
+  
   }
   .footer-container{
     background-color: #0A1C2B;
     border-radius: 10px;
     text-align: center;
-    height: 90px;
+    height: 80px;
   }
   .home-sci a i {
       font-size: 30px; /* Adjust the font size as needed */
@@ -33,7 +36,7 @@
 <body>
 <header style="margin-top: 2%;">
   <div class="header-container">
-    <span style="margin-left: 3%;color:#79d4bd;"class="logo"><b>SIMPLE LEARN</b></span>
+    <span style="margin-left: 3%;color:aqua;"class="logo"><b>SIMPLE LEARNING TECHNIQUES</b></span>
     <nav class="nav-menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
