--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@ footer div p a {
 footer div p a:hover {
   text-decoration: underline;
 }
+
+/*
+styling the certificate
+*/
+
+.box:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+  color: aqua;
+  background-color: #0A1C2B;
+}
+
   </style>
 </head>
 
@@ -95,7 +107,7 @@ footer div p a:hover {
     <p style="padding: 10px;">AWS Certified Data Engineer - Associate validates skills and knowledge in core data-related AWS services, ability to implement data pipelines,
        monitor and troubleshoot issues, and optimize cost and performance in accordance with best practices. </p>
 
-
+<br>
       <center>
         <figure>
           <img src="dataEng.png" alt="" style="height: 80x; width: 150px;">
