--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ styling the certificate
   </div>
   <div class="box" style="text-align: center;">
     <h4 style="text-align: center;">  AWS Certified Solutions Architect</h4>
-    <p style="padding: 10px;">AWS Certified Solutions Architect - Associate showcases knowledge and skills in AWS technology, across a wide range of AWS services. 
+    <p style="padding: 10px; text-align: left;">AWS Certified Solutions Architect - Associate showcases knowledge and skills in AWS technology, across a wide range of AWS services. 
       The focus of this certification is on the design of cost and performance optimized solutions, demonstrating a strong understanding of 
       the AWS Well-Architected Framework. </p>
 
@@ -104,7 +104,7 @@ styling the certificate
   </div>
   <div class="box">
     <h4 style="text-align: center;"> AWS Certified Data Engineer - Associate</h4>
-    <p style="padding: 10px;">AWS Certified Data Engineer - Associate validates skills and knowledge in core data-related AWS services, ability to implement data pipelines,
+    <p style="padding: 10px;text-align: left;">AWS Certified Data Engineer - Associate validates skills and knowledge in core data-related AWS services, ability to implement data pipelines,
        monitor and troubleshoot issues, and optimize cost and performance in accordance with best practices. </p>
 
 <br>
@@ -118,7 +118,7 @@ styling the certificate
   </div>
   <div class="box">
     <h4 style="text-align: center;"> Microsoft Azure Cloud Architect</h4>
-    <p style="padding: 10px;">Azure Cloud Architect Master’s Program will help you master the Azure infrastructure by understanding Azure Cloud Architect Technology Solutions, 
+    <p style="padding: 10px; text-align: left;">Azure Cloud Architect Master’s Program will help you master the Azure infrastructure by understanding Azure Cloud Architect Technology Solutions, 
       implementing workloads and security in Azure, creating and deploying apps in Azure, and securing data in Azure.</p>
       <a href="https://www.simplilearn.com/azure-cloud-architect-certification-training-course" style="margin-left: 20px;"> Learn more</a>
       <center>
